syntax = "proto3";

package proto;

option go_package = "./internal/proto";

message Pager {
    int64 page = 1;
    int64 page_size = 2;
    int64 total_rows = 3;
}

